. [NEW] CProgressTimer: 
            -Convenience class constructor now passes in CCSprite (this gives developers easier access to timer with CCSpriteFrames, CCSprites, etc)
            - Reduced the progress timer types to just radial and bar - added in reverse, midpoint, barChangeRate to be have more flexible options to modify the progress.
. [NEW] Math: Using kazmath for matrix and projection operations
. [NEW] Math: Using NEON Matrix Multiplication from Oolong project
. [NEW] ccGLState: added helper functions that keeps the GL state in order to prevent setters/getters
. [FIX] All: Removed deprecated methods and classes that were scheduled for removal post 1.0
. [FIX] CCProgressTimer: reverse renamed to reverseDirection in order to prevent possible collision with action#reverse
. [FIX] Xcode: cocosLive: Removed. Use OpenFeint or GameCenter instead
. [FIX] Xcode: FontLabel: Removed since in iOS 4 you can load custom TTF
. [FIX] Xcode: TouchJSON: Removed. No longer needed since cocosLive was removed
. [FIX] Xcode: Tremor / vorbis: Removed. Experimental sound engine is no longer supported
. [FIX] Xcode: iOS 4 is minimun required to run


version 1.0-rc2 - XX-Apr-2011
. [NEW] Director: Use small dt when the game is being debugged.
. [NEW] Tests: Added test case for bug 1159
. [FIX] Particles: TTL is always >= 0.
. [FIX] Scheduler: Fixed possible crash when unscheduling a sibling
. [FIX] Templates: Use NS_BLOCK_ASSERTIONS and NDEBUG in Release Mode to remove asserts
. [FIX] Templates: Xcode 3 templates fixed. Removed unused files in cocos2d lib. Added missing files from TouchJSON
. [FIX] Templates: ARMv6 devices uses "none" autorotation to improve speed
. [FIX] Templates: Added Xcode 4 "File" templates both for iOS and Mac OS X
. [FIX] Templates: Uses CFBundleIconFiles in Info.plist instead of "Icon Files" (issue #1151)
. [FIX] Templates: Xcode 4 templates generates "sub groups"
. [FIX] Templates: Xcode 4 Mac templates include CocosDenshion