@@ -51,62 +51,6 @@ typedef enum {
 	CCDeviceOrientationLandscapeRight = kCCDeviceOrientationLandscapeRight,
 } ccDeviceOrientation;
 
-/** @typedef ccDirectorType
- Possible Director Types.
- @since v0.8.2
- */
-typedef enum {
-	/** Will use a Director that triggers the main loop from an NSTimer object
-	 *
-	 * Features and Limitations:
-	 * - Integrates OK with UIKit objects
-	 * - It the slowest director
-	 * - The invertal update is customizable from 1 to 60
-	 */
-	kCCDirectorTypeNSTimer,
-	
-	/** will use a Director that triggers the main loop from a custom main loop.
-	 *
-	 * Features and Limitations:
-	 * - Faster than NSTimer Director
-	 * - It doesn't integrate well with UIKit objecgts
-	 * - The interval update can't be customizable
-	 */
-	kCCDirectorTypeMainLoop,
-	
-	/** Will use a Director that triggers the main loop from a thread, but the main loop will be executed on the main thread.
-	 *
-	 * Features and Limitations:
-	 * - Faster than NSTimer Director
-	 * - It doesn't integrate well with UIKit objecgts
-	 * - The interval update can't be customizable
-	 */
-	kCCDirectorTypeThreadMainLoop,
-	
-	/** Will use a Director that synchronizes timers with the refresh rate of the display.
-	 *
-	 * Features and Limitations:
-	 * - Faster than NSTimer Director
-	 * - Only available on 3.1+
-	 * - Scheduled timers & drawing are synchronizes with the refresh rate of the display
-	 * - Integrates OK with UIKit objects
-	 * - The interval update can be 1/60, 1/30, 1/15
-	 */	
-	kCCDirectorTypeDisplayLink,
-	
-	/** Default director is the NSTimer directory */
-	kCCDirectorTypeDefault = kCCDirectorTypeNSTimer,
-	
-	// backward compatibility stuff
-	CCDirectorTypeNSTimer = kCCDirectorTypeNSTimer,
-	CCDirectorTypeMainLoop = kCCDirectorTypeMainLoop,
-	CCDirectorTypeThreadMainLoop = kCCDirectorTypeThreadMainLoop,
-	CCDirectorTypeDisplayLink = kCCDirectorTypeDisplayLink,
-	CCDirectorTypeDefault = kCCDirectorTypeDefault,
-	
-	
-} ccDirectorType;
-
 /** CCDirector extensions for iPhone
  */
 @interface CCDirector (iOSExtension)
@@ -146,26 +90,6 @@ typedef enum {
 -(CGFloat) contentScaleFactor;
 @end
 
-@interface CCDirector (iOSExtensionClassMethods)
-
-/** There are 4 types of Director.
- - kCCDirectorTypeNSTimer (default)
- - kCCDirectorTypeMainLoop
- - kCCDirectorTypeThreadMainLoop
- - kCCDirectorTypeDisplayLink
- 
- Each Director has it's own benefits, limitations.
- If you are using SDK 3.1 or newer it is recommed to use the DisplayLink director
- 
- This method should be called before any other call to the director.
- 
- It will return NO if the director type is kCCDirectorTypeDisplayLink and the running SDK is < 3.1. Otherwise it will return YES.
- 
- @since v0.8.2
- */
-+(BOOL) setDirectorType:(ccDirectorType) directorType;
-@end
-
 #pragma mark -
 #pragma mark CCDirectorIOS
 
@@ -184,38 +108,6 @@ typedef enum {
 }
 @end
 
-/** FastDirector is a Director that triggers the main loop as fast as possible.
- *
- * Features and Limitations:
- *  - Faster than "normal" director
- *  - Consumes more battery than the "normal" director
- *  - It has some issues while using UIKit objects
- */
-@interface CCDirectorFast : CCDirectorIOS
-{
-	BOOL isRunning;
-	
-	NSAutoreleasePool	*autoreleasePool;
-}
--(void) mainLoop;
-@end
-
-/** ThreadedFastDirector is a Director that triggers the main loop from a thread.
- *
- * Features and Limitations:
- *  - Faster than "normal" director
- *  - Consumes more battery than the "normal" director
- *  - It can be used with UIKit objects
- *
- * @since v0.8.2
- */
-@interface CCDirectorFastThreaded : CCDirectorIOS
-{
-	BOOL isRunning;	
-}
--(void) mainLoop;
-@end
-
 /** DisplayLinkDirector is a Director that synchronizes timers with the refresh rate of the display.
  *
  * Features and Limitations:
@@ -232,22 +124,6 @@ typedef enum {
 	id displayLink;
 }
 -(void) mainLoop:(id)sender;
-@end
-
-/** TimerDirector is a Director that calls the main loop from an NSTimer object
- *
- * Features and Limitations:
- * - Integrates OK with UIKit objects
- * - It the slowest director
- * - The invertal update is customizable from 1 to 60
- *
- * It is the default Director.
- */
-@interface CCDirectorTimer : CCDirectorIOS
-{
-	NSTimer *animationTimer;
-}
--(void) mainLoop;
 @end
 
 // optimization. Should only be used to read it. Never to write it.
