@@ -73,38 +73,8 @@ CGFloat	__ccContentScaleFactor = 1;
 
 +(Class) defaultDirector
 {
-	return [CCDirectorTimer class];
+	return [CCDirectorDisplayLink class];
 }
-
-+ (BOOL) setDirectorType:(ccDirectorType)type
-{
-	if( type == CCDirectorTypeDisplayLink ) {
-		NSString *reqSysVer = @"3.1";
-		NSString *currSysVer = [[UIDevice currentDevice] systemVersion];
-		
-		if([currSysVer compare:reqSysVer options:NSNumericSearch] == NSOrderedAscending)
-			return NO;
-	}
-	switch (type) {
-		case CCDirectorTypeNSTimer:
-			[CCDirectorTimer sharedDirector];
-			break;
-		case CCDirectorTypeDisplayLink:
-			[CCDirectorDisplayLink sharedDirector];
-			break;
-		case CCDirectorTypeMainLoop:
-			[CCDirectorFast sharedDirector];
-			break;
-		case CCDirectorTypeThreadMainLoop:
-			[CCDirectorFastThreaded sharedDirector];
-			break;
-		default:
-			NSAssert(NO,@"Unknown director type");
-	}
-	
-	return YES;
-}
-
 @end
 
 
@@ -480,218 +450,7 @@ CGFloat	__ccContentScaleFactor = 1;
 
 
 #pragma mark -
-#pragma mark Director TimerDirector
-
-@implementation CCDirectorTimer
-- (void)startAnimation
-{
-	NSAssert( animationTimer == nil, @"animationTimer must be nil. Calling startAnimation twice?");
-	
-	if( gettimeofday( &lastUpdate_, NULL) != 0 ) {
-		CCLOG(@"cocos2d: Director: Error in gettimeofday");
-	}
-	
-	animationTimer = [NSTimer scheduledTimerWithTimeInterval:animationInterval_ target:self selector:@selector(mainLoop) userInfo:nil repeats:YES];
-	
-	//
-	//	If you want to attach the opengl view into UIScrollView
-	//  uncomment this line to prevent 'freezing'.
-	//	It doesn't work on with the Fast Director
-	//
-	//	[[NSRunLoop currentRunLoop] addTimer:animationTimer
-	//								 forMode:NSRunLoopCommonModes];
-}
-
--(void) mainLoop
-{
-	[self drawScene];
-}
-
-- (void)stopAnimation
-{
-	[animationTimer invalidate];
-	animationTimer = nil;
-}
-
-- (void)setAnimationInterval:(NSTimeInterval)interval
-{
-	animationInterval_ = interval;
-	
-	if(animationTimer) {
-		[self stopAnimation];
-		[self startAnimation];
-	}
-}
-
--(void) dealloc
-{
-	[animationTimer release];
-	[super dealloc];
-}
-@end
-
-
-#pragma mark -
-#pragma mark Director DirectorFast
-
-@implementation CCDirectorFast
-
-- (id) init
-{
-	if(( self = [super init] )) {
-		
-#if CC_DIRECTOR_DISPATCH_FAST_EVENTS
-		CCLOG(@"cocos2d: Fast Events enabled");
-#else
-		CCLOG(@"cocos2d: Fast Events disabled");
-#endif		
-		isRunning = NO;
-		
-		// XXX:
-		// XXX: Don't create any autorelease object before calling "fast director"
-		// XXX: else it will be leaked
-		// XXX:
-		autoreleasePool = [NSAutoreleasePool new];
-	}
-
-	return self;
-}
-
-- (void) startAnimation
-{
-	// XXX:
-	// XXX: release autorelease objects created
-	// XXX: between "use fast director" and "runWithScene"
-	// XXX:
-	[autoreleasePool release];
-	autoreleasePool = nil;
-
-	if ( gettimeofday( &lastUpdate_, NULL) != 0 ) {
-		CCLOG(@"cocos2d: Director: Error in gettimeofday");
-	}
-	
-
-	isRunning = YES;
-
-	SEL selector = @selector(mainLoop);
-	NSMethodSignature* sig = [[[CCDirector sharedDirector] class]
-							  instanceMethodSignatureForSelector:selector];
-	NSInvocation* invocation = [NSInvocation
-								invocationWithMethodSignature:sig];
-	[invocation setTarget:[CCDirector sharedDirector]];
-	[invocation setSelector:selector];
-	[invocation performSelectorOnMainThread:@selector(invokeWithTarget:)
-								 withObject:[CCDirector sharedDirector] waitUntilDone:NO];
-	
-//	NSInvocationOperation *loopOperation = [[[NSInvocationOperation alloc]
-//											 initWithTarget:self selector:@selector(mainLoop) object:nil]
-//											autorelease];
-//	
-//	[loopOperation performSelectorOnMainThread:@selector(start) withObject:nil
-//								 waitUntilDone:NO];
-}
-
--(void) mainLoop
-{
-	while (isRunning) {
-	
-		NSAutoreleasePool *loopPool = [NSAutoreleasePool new];
-
-#if CC_DIRECTOR_DISPATCH_FAST_EVENTS
-		while( CFRunLoopRunInMode(kCFRunLoopDefaultMode, 0.004f, FALSE) == kCFRunLoopRunHandledSource);
-#else
-		while(CFRunLoopRunInMode(kCFRunLoopDefaultMode, 0, TRUE) == kCFRunLoopRunHandledSource);
-#endif
-
-		if (isPaused_) {
-			usleep(250000); // Sleep for a quarter of a second (250,000 microseconds) so that the framerate is 4 fps.
-		}
-		
-		[self drawScene];		
-
-#if CC_DIRECTOR_DISPATCH_FAST_EVENTS
-		while( CFRunLoopRunInMode(kCFRunLoopDefaultMode, 0.004f, FALSE) == kCFRunLoopRunHandledSource);
-#else
-		while(CFRunLoopRunInMode(kCFRunLoopDefaultMode, 0, TRUE) == kCFRunLoopRunHandledSource);
-#endif
-
-		[loopPool release];
-	}	
-}
-- (void) stopAnimation
-{
-	isRunning = NO;
-}
-
-- (void)setAnimationInterval:(NSTimeInterval)interval
-{
-	NSLog(@"FastDirectory doesn't support setAnimationInterval, yet");
-}
-@end
-
-#pragma mark -
-#pragma mark Director DirectorThreadedFast
-
-@implementation CCDirectorFastThreaded
-
-- (id) init
-{
-	if(( self = [super init] )) {		
-		isRunning = NO;		
-	}
-	
-	return self;
-}
-
-- (void) startAnimation
-{
-	
-	if ( gettimeofday( &lastUpdate_, NULL) != 0 ) {
-		CCLOG(@"cocos2d: ThreadedFastDirector: Error on gettimeofday");
-	}
-
-	isRunning = YES;
-
-	NSThread *thread = [[NSThread alloc] initWithTarget:self selector:@selector(mainLoop) object:nil];
-	[thread start];
-	[thread release];
-}
-
--(void) mainLoop
-{
-	while( ![[NSThread currentThread] isCancelled] ) {
-		if( isRunning )
-			[self performSelectorOnMainThread:@selector(drawScene) withObject:nil waitUntilDone:YES];
-				
-		if (isPaused_) {
-			usleep(250000); // Sleep for a quarter of a second (250,000 microseconds) so that the framerate is 4 fps.
-		} else {
-//			usleep(2000);
-		}
-	}	
-}
-- (void) stopAnimation
-{
-	isRunning = NO;
-}
-
-- (void)setAnimationInterval:(NSTimeInterval)interval
-{
-	NSLog(@"FastDirector doesn't support setAnimationInterval, yet");
-}
-@end
-
-#pragma mark -
 #pragma mark DirectorDisplayLink
-
-// Allows building DisplayLinkDirector for pre-3.1 SDKS
-// without getting compiler warnings.
-@interface NSObject(CADisplayLink)
-+ (id) displayLinkWithTarget:(id)arg1 selector:(SEL)arg2;
-- (void) addToRunLoop:(id)arg1 forMode:(id)arg2;
-- (void) setFrameInterval:(int)interval;
-- (void) invalidate;
-@end
 
 @implementation CCDirectorDisplayLink
 
@@ -716,7 +475,7 @@ CGFloat	__ccContentScaleFactor = 1;
 	
 	CCLOG(@"cocos2d: Frame interval: %d", frameInterval);
 
-	displayLink = [NSClassFromString(@"CADisplayLink") displayLinkWithTarget:self selector:@selector(mainLoop:)];
+	displayLink = [CADisplayLink displayLinkWithTarget:self selector:@selector(mainLoop:)];
 	[displayLink setFrameInterval:frameInterval];
 	[displayLink addToRunLoop:[NSRunLoop currentRunLoop] forMode:NSDefaultRunLoopMode];
 }
