@@ -3,6 +3,7 @@ version 2.0-alpha XX-Apr-2011
 . [NEW] CProgressTimer: 
             -Convenience class constructor now passes in CCSprite (this gives developers easier access to timer with CCSpriteFrames, CCSprites, etc)
             - Reduced the progress timer types to just radial and bar - added in reverse, midpoint, barChangeRate to be have more flexible options to modify the progress.
+. [NEW] Director: Removed Fast, FastThreaded and NSTimer director. The only one available is DisplayLink.
 . [NEW] Math: Using kazmath for matrix and projection operations
 . [NEW] Math: Using NEON Matrix Multiplication from Oolong project
 . [NEW] ccGLState: added helper functions that keeps the GL state in order to prevent setters/getters
